[metadata]
name = pytest-beartype
version = 0.0.1
description = Pytest plugin to run your tests with beartype checking enabled.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/pytest-beartype
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    pytest
    beartype
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
pytest11 =
    pytest_beartype = pytest_beartype

[options.extras_require]
dev =
    black
    mypy
    pytest-cov
    tox

[options.package_data]
pytest-beartype =
    py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
